fix color error

--- a/style.css
+++ b/style.css
@@ -56,6 +56,10 @@
     filter: none;
 }
 
+#messy-search-results-container .tab-result p {
+    color: white;
+}
+
 #messy-search-input:focus, #messy-search-input:hover {
     outline: none;
     box-shadow: none;
